@@ -3,15 +3,15 @@
 #export DH_VERBOSE=1
 
 
-export DEB_CXXFLAGS_MAINT_APPEND  := -pipe -Wall
-export DEB_LDFLAGS_MAINT_APPEND := -Wl,--as-needed
+export DEB_CXXFLAGS_MAINT_APPEND := -pipe -Wall -std=c++11
+export DEB_LDFLAGS_MAINT_APPEND  := -Wl,--as-needed
 
 
 %:
 	dh $@ --with autoreconf --parallel
 
 override_dh_auto_configure:
-	dh_auto_configure -- $(CROSS_CONFIGURE_OPTIONS)
+	dh_auto_configure -- --disable-werror $(CROSS_CONFIGURE_OPTIONS)
 
 override_dh_auto_clean:
 	-rm -rf doc/ikiwiki/.ikiwiki
